# db-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/db_mcp/: __main__.py  client.py  formatters.py  server.py
tests/: test_client.py  test_formatters.py  test_server.py
