[project]
name = "db-mcp-server"
version = "0.1.0"
description = "MCP server for the Deutsche Bahn public transport API"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "deutsche-bahn", "transport", "claude", "llm"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
db-mcp = "db_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
